--- a/src/CSS/Footer.css
+++ b/src/CSS/Footer.css
@@ -2,7 +2,7 @@
   text-align: center;
   background-color: #427d9d;
   min-height: 5em;
-  height: 100px;
+  height: auto;
   padding: 1rem;
   display: flex;
   flex-direction: row;
