--- a/src/CSS/Oglas_page.css
+++ b/src/CSS/Oglas_page.css
@@ -133,3 +133,11 @@
   border-radius: 15px;
   padding-left: 0.5em;
 }
+.oglas-page-button {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 2em;
+}
