--- a/src/CSS/Login.css
+++ b/src/CSS/Login.css
@@ -70,3 +70,8 @@
   padding-left: 0.5em;
   font-size: 1.2rem;
 }
+@media only screen and (max-width: 768px) {
+  .login-container-main-div {
+    width: 90%;
+  }
+}
