--- a/src/CSS/Main_profil.css
+++ b/src/CSS/Main_profil.css
@@ -19,11 +19,11 @@
   border-radius: 15px;
   margin-bottom: 1em;
 }
-.podaci {
+.podaci-m {
   display: flex;
   flex-direction: row;
 }
-.profil-data-image {
+.profil-data-image-m {
   width: 10em;
   height: 10em;
   border-radius: 50%;
@@ -33,7 +33,7 @@
   margin-right: 3em;
   overflow: hidden;
 }
-.profil-data-image img {
+.profil-data-image-m img {
   height: 100%;
   width: 100%;
 }
@@ -101,11 +101,18 @@
     align-items: center;
     padding-left: 0;
   }
+  .podaci-m {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
   .profil-dugmad-m div {
     margin-bottom: 0.5em;
   }
 
-  .podaci {
+  .podaci-m {
     flex-direction: column;
   }
   .profil-data-info div {
@@ -126,7 +133,26 @@
     align-items: center;
     padding-left: 1em;
   }
-  .profil-data-image {
-    margin-left: 10%;
+  .profil-data-image-m {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    margin: 2em;
+    width: 10em;
+    height: 10em;
+  }
+  .profil-data-image-m img {
+    width: 100%;
+    height: 100%;
+  }
+}
+@media only screen and (max-width: 650px) {
+  .profil-data-image-m {
+    height: 8em;
+    width: 8em;
+    margin: 0.5em;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
 }
