--- a/src/CSS/DiffProfile.css
+++ b/src/CSS/DiffProfile.css
@@ -19,7 +19,7 @@
   border-radius: 15px;
   margin-bottom: 1em;
 }
-.podaci {
+.data {
   display: flex;
   flex-direction: row;
 }
@@ -37,13 +37,14 @@
   height: 100%;
   width: 100%;
 }
+
 .profil-data-info {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   color: #ddf2fd;
 }
-.profil-dugmad {
+.profil-buttons {
   display: flex;
   width: 60%;
   justify-content: space-around;
@@ -61,7 +62,7 @@
   overflow: hidden;
   color: #ddf2fd;
 }
-.profil-oglasi {
+.profil-ads {
   display: flex;
   flex-direction: row;
   overflow-x: scroll;
@@ -74,14 +75,14 @@
   border-radius: 15px;
 }
 
-.oglasi-korisnika-naslov {
+.ads-user-naslov {
   display: flex;
   flex-direction: row;
   align-self: flex-start;
   margin-left: 35px;
   margin-bottom: 1em;
 }
-.profil-dugmad-dp {
+.profil-buttons-dp {
   width: 40%;
   display: flex;
   flex-direction: row;
@@ -97,13 +98,13 @@
     align-items: center;
   }
 
-  .podaci {
+  .data {
     flex-direction: column;
   }
   .profil-data-info div {
     text-align: center;
   }
-  .profil-oglasi {
+  .profil-ads {
     padding-left: 1rem;
   }
 
@@ -112,7 +113,7 @@
     display: flex;
     flex-direction: column;
   }
-  .profil-oglasi {
+  .profil-ads {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -121,7 +122,7 @@
   .profil-data-image {
     margin-left: 10%;
   }
-  .profil-dugmad-dp {
+  .profil-buttons-dp {
     width: 90%;
   }
 }
@@ -133,13 +134,13 @@
     justify-content: center;
     align-items: center;
   }
-  .profil-dugmad-dp {
+  .profil-buttons-dp {
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
   }
-  .profil-dugmad-dp div {
+  .profil-buttons-dp div {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -162,14 +163,14 @@
     height: 100%;
     width: 100%;
   }
-  .podaci {
+  .data {
     flex-direction: column;
   }
   .profil-data-info div {
     text-align: center;
     font-size: 0.8rem;
   }
-  .profil-oglasi {
+  .profil-ads {
     padding-left: 1rem;
   }
 
@@ -178,7 +179,7 @@
     display: flex;
     flex-direction: column;
   }
-  .profil-oglasi {
+  .profil-ads {
     display: flex;
     flex-direction: column;
     align-items: center;
